improve Long Streaks page

--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -150,14 +150,14 @@
 
       <ul style="margin-top: 20px;overflow-x:auto;">
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Wins')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Wins</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Wins')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Wins</a>
@@ -165,14 +165,14 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Draws')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Draws</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Draws')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Draws</a>
@@ -180,7 +180,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Margin Wins')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Margin Wins</a>
@@ -188,7 +188,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Clean Sheet')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Clean
               Sheet</a>
@@ -196,7 +196,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Clean Sheet')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Clean Sheet</a>
@@ -204,7 +204,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Goals Fest')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Goals
               Fest</a>
@@ -212,7 +212,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Goals Fest')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Goals Fest</a>
@@ -220,14 +220,14 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('BTTS')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">BTTS</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No BTTS')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               BTTS</a>
@@ -235,7 +235,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Scored Both Halves')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Score
               Both Halves</a>
@@ -243,7 +243,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Scored Both Halves')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Score Both Halves</a>
@@ -251,7 +251,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Concede Both Halves')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Concede
               Both Halves</a>
@@ -259,7 +259,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Concede Both Halves')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Concede Both Halves</a>
@@ -267,7 +267,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Win Both Halves')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Win Both Halves</a>
@@ -275,7 +275,7 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Win && +2.5 Goals')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
               Win && +2.5 Goals</a>
@@ -283,28 +283,28 @@
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No 2HT > 1HT')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No 2HT > 1HT</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No 1HT > 2HT')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No 1HT > 2HT</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('Win 1HT')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">Win 1HT</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
         <li style="display: inline-block; margin-right: 10px;">
-          <div class="u-align-center u-form-group u-form-submit">
+          <div class="u-align-center u-form-group u-form-submit" style="font-size: smaller;">
             <a onclick="changeHeadCell('No Win 1HT')"
               class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No Win 1HT</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
@@ -324,17 +324,19 @@
         </tr> -->
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;overflow-x:auto;">
         <table class="u-table-entity" id="longStreaksTeamsTable"
-          style="width: 65%; margin-left: auto; margin-right: auto;">
+          style="width: 80%; margin-left: auto; margin-right: auto;">
           <colgroup>
             <col width="3%">
             <col width="22%">
             <col width="10%">
             <col width="15%">
             <col width="15%">
+            <col width="15%">
+            <col width="25%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr>
-              <th id="longStreaksHeadCell" style="text-align: center;" colspan="5">-</th>
+              <th id="longStreaksHeadCell" style="text-align: center;" colspan="7">-</th>
             </tr>
             <tr style="height: 40px;">
               <th class="u-table-cell"
@@ -346,7 +348,11 @@
               <th onclick="sortTableNumbers(3,'footballTableStreaks')" class="u-table-cell"
                 style="padding-top: 0; padding-bottom: 0;">Main League</th>
               <th onclick="sortTableNumbers(4,'footballTableStreaks')" class="u-table-cell"
-                style="padding-top: 0; padding-bottom: 0;">All Competitions</th>
+                style="padding-top: 0; padding-bottom: 0;">All Comps</th>
+              <th onclick="sortTableNumbers(5,'footballTableStreaks')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">Max Red Run</th>
+              <th onclick="sortTableNumbers(6,'footballTableStreaks')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">Score</th>
             </tr>
           </thead>
           <tbody id="footballTableStreaks"
@@ -354,6 +360,29 @@
             <tr></tr>
           </tbody>
         </table>
+        <p class="collapsible" style="cursor: pointer;font-size: smaller;">[+] Expand</p>
+        <script>
+          var coll = document.getElementsByClassName("collapsible");
+          var i;
+
+          for (i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click", function () {
+              this.classList.toggle("activeCollapsible");
+              var hiddenRows = document.querySelectorAll('.hidden-row');
+              if (hiddenRows[0].style.display === "table-row") {
+                hiddenRows.forEach(function(row) {
+                  row.style.display = "none";
+                });
+                this.innerHTML = "[+] Expand";
+              } else {
+                hiddenRows.forEach(function(row) {
+                  row.style.display = "table-row";
+                });
+                this.innerHTML = "[-] Collapse";
+              }
+            });
+          }
+        </script>
 
       </div>
     </div>
