--- a/TeamStrategiesHistoricStats.html
+++ b/TeamStrategiesHistoricStats.html
@@ -144,7 +144,7 @@
         </form>
       </div>
       <h5 class="u-text u-text-default u-text-1" style="text-shadow: none; margin: 3% auto;" id="scoreTextInfo"> </h5>
-      <h6 class="u-text u-text-default u-text-1" style="text-shadow: none; margin: 3% auto;" id="scoreValuesInfo"> </h6>
+      <h6 class="u-text u-text-default u-text-1" style="text-shadow: none; margin: 3% auto;font-size: smaller;" id="scoreValuesInfo"> </h6>
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 20px;">
         <table class="u-table-entity" id="teamStatsTable" style="width: 120%; margin-left: -10%; margin-right: auto;">
           <colgroup>
