--- a/Over25-Kelly-All-Matches.html
+++ b/Over25-Kelly-All-Matches.html
@@ -87,7 +87,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <title>MW - All Matches</title>
+  <title>BTTS 1H - All Matches</title>
   <link rel="icon" type="image/x-icon" href="images/favicon-logo-no-background.png">
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Team-Info-Page.css" media="screen">
@@ -98,7 +98,7 @@
   <script class="u-script" type="text/javascript" src="javascript/common/indexedDB.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
   <script type="text/javascript">
-    var currentStrategy = 2;
+    var currentStrategy = OVER_25_KELLY_ID;
   </script>
         <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
         <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
@@ -127,7 +127,7 @@
 		"logo": "images/logo-no-background.png"
 }</script>
   <meta name="theme-color" content="#efa69d">
-  <meta property="og:title" content="MW - All Matches">
+  <meta property="og:title" content="Over 2.5 Goals Kelly - All Matches">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
 </head>
@@ -157,25 +157,17 @@
     <div class="u-clearfix u-sheet u-sheet-1"><span
         class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="Javascript:history.go ( -1); Location.reload ()"><img
           src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
-      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;"><b>MARGIN WINS - List of all matches
+      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;"><b>Over 2.5 Goals kelly - List of all matches
           played</b></h4>
       <!-- <h3 class="u-text u-text-default u-text-1">Team Name</h3> -->
-      <form action="#" style="text-align: center; margin-top: 4%; margin-bottom: 4%;">
+      <form class="hidden" action="#" style="text-align: center; margin-top: 4%; margin-bottom: 4%;">
         <label for="lang">Select Season</label>
         <select id="seasonSelect">
-          <option value="all">All</option>
-          <option value="2021">2021</option>
-          <option value="2021-22">2021/22</option>
-          <option value="2022">2022</option>
-          <option value="2022-23">2022/23</option>
-          <option value="2023">2023</option>
-          <option value="2023-24">2023/24</option>
-          <option value="2024-25">2024/25</option>
-          <option selected="selected" value="2025">2025</option>
+          <option selected="selected" value="all">All</option>
         </select>
       </form>
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 30px;">
-        <table class="u-table-entity" id="ehMatchesTable">
+        <table class="u-table-entity" id="gfMatchesTable">
           <colgroup>
             <col width="6.6%">
             <col width="9.4%">
@@ -189,12 +181,12 @@
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 30px;">
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">DELETE</th>
-              <th onclick="sortTable(1,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Date</th>
-              <th onclick="sortTable(2,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Match</th>
-              <th onclick="sortTable(3,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Final Result</th>
-              <th onclick="sortTableNumbers(4,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd</th>
-              <th onclick="sortTableNumbers(5,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Stake</th>
-              <th onclick="sortTableNumbers(6,'ehMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Seq Level</th>
+              <th onclick="sortTable(1,'gfMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Date</th>
+              <th onclick="sortTable(2,'gfMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Match</th>
+              <th onclick="sortTable(3,'gfMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Final Result</th>
+              <th onclick="sortTableNumbers(4,'gfMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd</th>
+              <th onclick="sortTableNumbers(5,'gfMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Stake</th>
+              <th onclick="sortTableNumbers(6,'gfMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Bankroll %</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update Match</th>
             </tr>
           </thead>
