edit homepage buttons

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <div class="u-align-left u-clearfix u-sheet u-sheet-1">
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1" style="margin-bottom: 150px;">
-          <div class="u-align-left u-container-style u-list-item u-repeater-item">
+          <!-- <div class="u-align-left u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Only-Draws.html">
               <a
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Only
                 Draws
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Margin-Wins.html">
               <a
@@ -69,13 +69,25 @@
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="BTTS-OneHalf-Kelly.html">
+              <a
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Kelly - BTTS One Half</a>
+            </div>
+          </div>
+          <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Over25-Kelly.html">
+              <a
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Kelly - Over 2.5</a>
+            </div>
+          </div>
+          <!-- <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Draws-Hunter.html">
               <a
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Draws
                 Hunter</a>
             </div>
-          </div>
-          <div class="u-container-style u-list-item u-repeater-item">
+          </div> -->
+          <!-- <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="25GoalLines.html">
               <a
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">2,5 Goal Lines</a>
@@ -86,7 +98,7 @@
               <a
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Goals Fest</a>
             </div>
-          </div>
+          </div> -->
           <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="LongStreaks.html">
               <a
