--- a/MW-All-Teams.html
+++ b/MW-All-Teams.html
@@ -82,7 +82,7 @@
             <tr style="height: 40px;">
               <th onclick="sortTable(0,'ehActiveTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">TEAM</th>
               <th onclick="sortTable(1,'ehActiveTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Active</th>
-              <th onclick="sortTable(2,'ehActiveTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">matches played / left</th>
+              <th onclick="sortTable(2,'ehActiveTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Num Matches</th>
               <th onclick="sortTable(3,'ehActiveTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Season</th>
               <th onclick="sortTableNumbers(4,'ehActiveTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd Avg</th>
               <th onclick="sortTableNumbers(5,'ehActiveTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Balance</th>
@@ -114,7 +114,7 @@
             <tr style="height: 40px;">
               <th onclick="sortTable(0,'inactiveEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">TEAM</th>
               <th onclick="sortTable(1,'inactiveEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Active</th>
-              <th onclick="sortTable(2,'inactiveEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">matches played / left</th>
+              <th onclick="sortTable(2,'inactiveEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Num Matches</th>
               <th onclick="sortTable(3,'inactiveEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Season</th>
               <th onclick="sortTableNumbers(4,'inactiveEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd Avg</th>
               <th onclick="sortTableNumbers(5,'inactiveEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Balance</th>
@@ -142,7 +142,7 @@
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 40px;">
               <th onclick="sortTable(0,'archEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">TEAM</th>
-              <th onclick="sortTable(1,'archEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Matches Played</th>
+              <th onclick="sortTable(1,'archEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Matches</th>
               <th onclick="sortTable(2,'archEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Season</th>
               <th onclick="sortTableNumbers(3,'archEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd Avg</th>
               <th onclick="sortTableNumbers(4,'archEHTeamsTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Balance</th>
