--- a/Margin-Wins.html
+++ b/Margin-Wins.html
@@ -86,14 +86,15 @@
               <option value="2023-24">2023/24</option>
               <option value="2024-25">2024/25</option>
               <option value="2025">2025</option>
+              <option value="2025-26">2025/26</option>
             </select>
           </form>
         </div>
       </div>
-      <div style="text-align: left; margin-bottom: -5%;">
+      <!-- <div style="text-align: left; margin-bottom: -5%;">
         <p>Description: </p>
         <p id="stratdescription" style="font-weight: unset;"></p>
-      </div>
+      </div> -->
     </div>
   </section>
   <section class="u-align-center u-clearfix u-palette-4-dark-2 u-section-2" id="sec-40f8">
