--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -350,7 +350,7 @@
               <th onclick="sortTableNumbers(4,'footballTableStreaks')" class="u-table-cell"
                 style="padding-top: 0; padding-bottom: 0;">All Comps</th>
               <th onclick="sortTableNumbers(5,'footballTableStreaks')" class="u-table-cell"
-                style="padding-top: 0; padding-bottom: 0;">Max Red Run</th>
+                style="padding-top: 0; padding-bottom: 0;">Longest Run</th>
               <th onclick="sortTableNumbers(6,'footballTableStreaks')" class="u-table-cell"
                 style="padding-top: 0; padding-bottom: 0;">Score</th>
             </tr>
