--- a/Goals-Fest.html
+++ b/Goals-Fest.html
@@ -80,6 +80,7 @@
               <option value="all">All</option>
               <option value="2023">2023</option>
               <option value="2023-24">2023/24</option>
+              <option value="2025-26">2025/26</option>
             </select>
           </form>
         </div>
