fix unused buttons

--- a/GF-All-Matches.html
+++ b/GF-All-Matches.html
@@ -171,6 +171,7 @@
           <option value="2023">2023</option>
           <option value="2023-24">2023/24</option>
           <option value="2024-25">2024/25</option>
+          <option value="2025-26">2025/26</option>
         </select>
       </form>
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 30px;">
