add update results buttons

--- a/Over25-Kelly-All-Matches.html
+++ b/Over25-Kelly-All-Matches.html
@@ -87,7 +87,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <title>BTTS 1H - All Matches</title>
+  <title>Over 2.5 Kelly - All Matches</title>
   <link rel="icon" type="image/x-icon" href="images/favicon-logo-no-background.png">
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Team-Info-Page.css" media="screen">
