add update results buttons in all pages

--- a/Goals-Fest.html
+++ b/Goals-Fest.html
@@ -196,7 +196,7 @@
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-4">
-              <a style="background-color: #373f64 !important"
+              <a onclick="callTriggerUpdateProgressiveLastMatches()" style="background-color: #373f64 !important"
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-3-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-4">update results</a>
             </div>
           </div>
